--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "./src/index.js",
   "type": "module",
   "scripts": {
-    "test": "",
+    "test": "jest",
     "build": "webpack",
     "start": "webpack-dev-server --open"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "repository": {
     "type": "git",
@@ -20,11 +25,18 @@
   },
   "homepage": "https://github.com/mikemoreen/frontend-project-lvl3#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.16.5",
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/user-event": "^13.5.0",
+    "babel-jest": "^27.4.5",
     "css-loader": "^6.5.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.4.5",
+    "mini-css-extract-plugin": "^2.4.5",
     "style-loader": "^3.3.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
