--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/user-event": "^13.5.0",
     "babel-jest": "^27.4.5",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
